--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,17 @@ matrix:
 
 install:
   - |
-    if [ "${TRAVIS_OS_NAME}" == "linux" ] || [ "${TRAVIS_OS_NAME}" == "osx" ]; then
-      brew install cmake
+    if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
+      export CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.17.0/cmake-3.17.0-Linux-x86_64.tar.gz"
+      export DEPS_DIR=$PWD
+      echo ${TRAVIS_OS_NAME}
+      mkdir cmake
+      travis_retry wget --quiet --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+      echo ${PATH}
       echo "Cmake Updated!"
+    elif [ "${TRAVIS_OS_NAME}" == "osx" ]; then
+        brew install cmake
     fi
     if ["$COV" == "yes"]; then
       pip3 install gcovr
