Feature/sonar scanner (#12)
A long journey has an end -- SonarSource & Coverage working !!!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.13)
 
 #  ╦ ╦┬ ┬┌─┐┌─┐┬─┐  ╔╗ ┬ ┬┌─┐┌─┐┌─┐┬─┐
 #  ╠═╣└┬┘├─┘├┤ ├┬┘  ╠╩╗│ │├┤ ├┤ ├┤ ├┬┘
@@ -19,7 +19,15 @@ function(assign_include_dirs_from_sources _target)
     target_include_directories(${_target} PRIVATE ${_include_dirs})
 endfunction()
 
-# MAIN
+# build target with code coverage information
+function(generate_code_coverage_data _target)
+    target_compile_options(${_target} PRIVATE
+            $<$<COMPILE_LANGUAGE:CXX>:-fprofile-arcs -ftest-coverage>
+            $<$<COMPILE_LANGUAGE:C>:-fprofile-arcs -ftest-coverage>)
+        target_link_options(${_target} PRIVATE -fprofile-arcs -ftest-coverage)
+endfunction()
+
+#### MAIN
 project(HyperBuffer)
 
 # Set C++ standard to C++14
@@ -27,16 +35,22 @@ set(CMAKE_CXX_STANDARD 14)
 set(CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(CODE_COVERAGE OFF CACHE BOOL "Build with instrumentation and code coverage")
+
 # SOURCE TARGET
 file(GLOB_RECURSE source "source/*.h*" "source/*.c*")
 
-set (LIB_NAME "HyperBuffer")
+set(LIB_NAME "HyperBuffer")
 
 # TEST TARGET
 set (TEST_NAME "${LIB_NAME}Test")
 file(GLOB_RECURSE source_test "test/tests/*.c*" "test/tests/*.c*")
 add_executable(${TEST_NAME} ${source} ${source_test})
 assign_include_dirs_from_sources(${TEST_NAME})
+
+if(CODE_COVERAGE)
+    generate_code_coverage_data(${TEST_NAME})
+endif(CODE_COVERAGE)
 
 # Add external-utils
 target_sources(${TEST_NAME} PRIVATE "test/main.cpp")
