--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,5 +19,5 @@ sonar.sourceEncoding=UTF-8
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=test/tests, source
-sonar.test.exclusions=test/**/*
+#sonar.test.exclusions=test/**/*
 sonar.coverage.exclusions=test/**/*
