Fix Sonar evaluation

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,10 @@ sonar.organization=idelobe
 #sonar.projectVersion=1.0
 
 sonar.language=cpp
+sonar.sourceEncoding=UTF-8
 
 # Config of C++ plugin
+sonar.cfamily.threads=2
 sonar.cfamily.cache.enabled=false
 sonar.cfamily.build-wrapper-output=deploy/build/bw-output
 
@@ -18,6 +20,10 @@ sonar.coverageReportPaths=deploy/report/coverage.xml
 sonar.sourceEncoding=UTF-8
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=test/tests, source
-#sonar.test.exclusions=test/**/*
+# Since we have a header-only library, we must add the test files as sources: sonar's entry points are compilation units.
+sonar.sources=source, test/tests 
+
+sonar.cpd.exclusions=test/**/*
 sonar.coverage.exclusions=test/**/*
+
+#sonar.issue.ignore.allfile
