--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
         - os: osx
           osx_image: xcode10.1
           compiler: clang
-          env: CONFIG="Release" COMPILER='clang++' COV="yes"
+          env: CONFIG="Release" COMPILER='clang++' COV="yes" ASAN="yes"
           addons:
             sonarcloud:
                 organization: "idelobe" # the key of the org you chose at step #3
@@ -77,7 +77,7 @@ before_script:
     - cd deploy
     - mkdir -p build
     - cd build
-    - if [ "$TRAVIS_OS_NAME" != "windows" ]; then cmake -H. -j 4 ../.. -DCMAKE_BUILD_TYPE=$CONFIG -DCODE_COVERAGE="$COV"; fi
+    - if [ "$TRAVIS_OS_NAME" != "windows" ]; then cmake -H. -j 4 ../.. -DCMAKE_BUILD_TYPE=$CONFIG -DCODE_COVERAGE="$COV" -DASAN="$ASAN"; fi
     - if [ "$TRAVIS_OS_NAME" == "windows" ]; then export PATH=$MSBUILD_PATH:$PATH; cmake -G "Visual Studio 16 2019" -DCMAKE_GENERATOR_PLATFORM=x64 ../..; fi
     
 script:
