--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
         
         - os: osx
           osx_image: xcode12.3
+          arch: arm64
           compiler: clang
           env: CONFIG="Debug" COMPILER='clang++' COV="no" ADD_CMAKE_ARGS="-DCMAKE_OSX_ARCHITECTURES=arm64"
           
@@ -46,10 +47,10 @@ matrix:
                   packages: *LinuxPackages 
         
         - os: windows
-          env: CONFIG="Debug" ARCH="x86_64" COV="no" MSBUILD_PATH="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
+          env: CONFIG="Debug" COV="no" MSBUILD_PATH="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
         
         - os: windows
-          env: CONFIG="Release" ARCH="x86_64" COV="no" MSBUILD_PATH="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
+          env: CONFIG="Release" COV="no" MSBUILD_PATH="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
 
 install:
   - |
