--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,7 @@ matrix:
             - COMPILER="g++"
             - C_COMPILER="gcc"
             - COV="no"
-          addons:
-              apt:
-                  sources: ['ubuntu-toolchain-r-test']
-                  packages: &LinuxPackages 
-                    - g++-9
-                    - cmake
-                    - python3-pip  
-            
+
         - os: linux
           dist: bionic
           compiler: gcc
@@ -43,7 +36,10 @@ matrix:
           addons:
               apt:
                   sources: ['ubuntu-toolchain-r-test']
-                  packages: *LinuxPackages 
+                  packages: &LinuxPackages 
+                    - g++-9
+                    - cmake
+                    - python3-pip  
         
         - os: linux
           dist: bionic
@@ -62,12 +58,23 @@ matrix:
 
 install:
   - |
-    if [ "${TRAVIS_OS_NAME}" == "linux" ] && [ TRAVIS_CPU_ARCH != "arm64-graviton2" ]; then
-      echo "skip update cmake"
+    if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
+      if [ ${TRAVIS_CPU_ARCH} == "arm64-graviton2" ]; then
+        export CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.21.0/cmake-3.21.0-linux-aarch64.tar.gz"
+      else
+        export CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.21.0/cmake-3.21.0-linux-x86_64.tar.gz"
+      fi
+      export DEPS_DIR=$PWD
+      echo ${TRAVIS_OS_NAME}
+      mkdir cmake
+      travis_retry wget --quiet --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+      echo "Cmake Updated!"
       
     elif [ "${TRAVIS_OS_NAME}" == "windows" ]; then
       choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Component.VC.Tools.x86.x64"
     fi
+    
     if [ "$COV" == "yes" ]; then
       pip3 install gcovr
       echo "Gcovr Updated!"
