--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,12 @@ sonar.organization=idelobe
 #sonar.projectVersion=1.0
 
 sonar.language=cpp
-sonar.sourceEncoding=UTF-8
+
+sonar.c.file.suffixes=.c,.h
+sonar.cpp.file.suffixes=.cpp,.hpp
 
 # Config of C++ plugin
 sonar.cfamily.threads=2
-sonar.cfamily.cache.enabled=false
 sonar.cfamily.build-wrapper-output=deploy/build/bw-output
 
 # Coverage Report
