--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Main Workflow
+name: Build & Test HyperBuffer
 on:
   push:
     branches:
@@ -22,9 +22,9 @@ jobs:
     uses: ./.github/workflows/build-sonarqube.yml
     secrets: inherit
 
-  call-check-single-header:
-    needs:
-      - call-build-linux
-      - call-build-macos
-      - call-build-windows
-    uses: ./.github/workflows/regenerate-single-include-header.yml
+  # call-check-single-header:
+  #   needs:
+  #     - call-build-linux
+  #     - call-build-macos
+  #     - call-build-windows
+  #   uses: ./.github/workflows/regenerate-single-include-header.yml
