exclude tests files from Sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,5 +26,5 @@ sonar.sources=source, test/tests
 
 sonar.cpd.exclusions=test/**/*
 sonar.coverage.exclusions=test/**/*
-
+sonar.exclusions=test/**/*
 #sonar.issue.ignore.allfile
