try sonar.tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,9 +22,10 @@ sonar.sourceEncoding=UTF-8
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since we have a header-only library, we must add the test files as sources: sonar's entry points are compilation units.
-sonar.sources=source, test/tests 
+sonar.sources=source/
+sonar.tests=test/tests/
 
 sonar.cpd.exclusions=test/**/*
 sonar.coverage.exclusions=test/**/*
-sonar.exclusions=test/**/*
+
 #sonar.issue.ignore.allfile
