--- a/.github/workflows/build-sonarqube.yml
+++ b/.github/workflows/build-sonarqube.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
+        submodules: 'true'
         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
     - name: Install Build Wrapper
       uses: SonarSource/sonarqube-scan-action/install-build-wrapper@v4
