--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.c.file.suffixes=.c,.h
 sonar.cpp.file.suffixes=.cpp,.hpp
 
 # Config of C++ plugin
-sonar.cfamily.threads=0 #default
+sonar.cfamily.threads=0
 #sonar.cfamily.build-wrapper-output=deploy/build/bw-output
 
 # Coverage Report
