--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -27,7 +27,6 @@ jobs:
         cd build
         cmake -DCMAKE_CXX_STANDARD=${{matrix.std}} \
               -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
-              --target HyperBufferTest \
               ../..
         
     - name: Build & Run Tests
@@ -35,5 +34,5 @@ jobs:
         CTEST_OUTPUT_ON_FAILURE: 1
       working-directory: deploy/build
       run: |
-        cmake --build . --parallel 2
+        cmake --build . --parallel 2 --target HyperBufferTest
         ctest -C ${{ matrix.build_type }} -L HyperBufferTest -j 2
